# TechHub-Bootcamp

./: .gitignore  README.md  check.py  pyproject.toml
data/function-words/: function_words.txt
data/vector-store/: meta.json
data/vector-store/collection/holmes-stories/: storage.sqlite
notebooks/: MarkovChains.ipynb  RAGs.ipynb  SentimentAnalysis.ipynb  TopicModelling.ipynb  WordRepresentation.ipynb
