[tool.poetry]
name = "techhub-bootcamp"
version = "0.1.0"
description = "The content of the NLP & RAGs workshop"
authors = ["Mamdouh Aldhafeeri"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
polars = "^0.20.23"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
scikit-learn = "^1.4.2"
nltk = "^3.8.1"
markovify = "^0.9.4"
scipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
